deployments/kubernetes/base/vct-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vct-api
  labels:
    app: vct-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: vct-api
